cabal-version: 3.0
name:          plutus-contract
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    jann.mueller@iohk.io
author:        Jann Müller
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

library
  import:          lang
  exposed-modules:
    Data.Row.Extras
    Data.Text.Extras
    Data.UUID.Extras
    Plutus.Contract
    Plutus.Contract.Checkpoint
    Plutus.Contract.Constraints
    Plutus.Contract.Effects
    Plutus.Contract.Error
    Plutus.Contract.Logging
    Plutus.Contract.Oracle
    Plutus.Contract.Request
    Plutus.Contract.Resumable
    Plutus.Contract.Schema
    Plutus.Contract.Secrets
    Plutus.Contract.State
    Plutus.Contract.StateMachine
    Plutus.Contract.StateMachine.MintingPolarity
    Plutus.Contract.StateMachine.OnChain
    Plutus.Contract.StateMachine.ThreadToken
    Plutus.Contract.Trace
    Plutus.Contract.Trace.RequestHandler
    Plutus.Contract.Types
    Plutus.Contract.Util
    Plutus.Trace
    Plutus.Trace.Effects.Assert
    Plutus.Trace.Effects.ContractInstanceId
    Plutus.Trace.Effects.EmulatedWalletAPI
    Plutus.Trace.Effects.EmulatorControl
    Plutus.Trace.Effects.RunContract
    Plutus.Trace.Effects.RunContractPlayground
    Plutus.Trace.Effects.Waiting
    Plutus.Trace.Emulator
    Plutus.Trace.Emulator.ContractInstance
    Plutus.Trace.Emulator.Extract
    Plutus.Trace.Emulator.System
    Plutus.Trace.Emulator.Types
    Plutus.Trace.Playground
    Plutus.Trace.Scheduler
    Plutus.Trace.Tag
    Wallet
    Wallet.API
    Wallet.Effects
    Wallet.Emulator
    Wallet.Emulator.Error
    Wallet.Emulator.Folds
    Wallet.Emulator.LogMessages
    Wallet.Emulator.MultiAgent
    Wallet.Emulator.NodeClient
    Wallet.Emulator.Stream
    Wallet.Emulator.Types
    Wallet.Emulator.Wallet
    Wallet.Error
    Wallet.Graph
    Wallet.Rollup
    Wallet.Rollup.Render
    Wallet.Rollup.Types
    Wallet.Types

  hs-source-dirs:  src

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator    >=1.2.0
    , freer-extras             >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-script-utils      >=1.2.0
    , plutus-tx-constraints    >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api               >=1.35
    , cardano-crypto
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , plutus-core               >=1.0.0
    , plutus-ledger-api         >=1.0.0
    , plutus-tx                 >=1.0.0
    , quickcheck-contractmodel
    , quickcheck-dynamic        >=3.0.0

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson                 >=1.5.2
    , aeson-pretty
    , base                  >=4.7     && <5
    , bytestring
    , containers
    , cryptonite            >=0.25
    , data-default
    , deepseq
    , directory
    , filepath
    , flat
    , foldl
    , freer-simple
    , hashable
    , hedgehog
    , html-entities
    , IntervalMap
    , lens
    , memory
    , mmorph
    , mtl
    , pretty
    , prettyprinter         >=1.1.0.1
    , profunctors
    , QuickCheck
    , row-types             >=1.0.1.0
    , semigroupoids
    , serialise
    , servant
    , stm
    , streaming
    , strict-containers
    , template-haskell
    , text
    , text-class
    , transformers
    , unordered-containers
    , uuid

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  if !((impl(ghcjs) || os(ghcjs)) || os(windows))
    exposed-modules:
      Plutus.Contract.Test
      Plutus.Contract.Test.ContractModel
      Plutus.Contract.Test.ContractModel.CrashTolerance
      Plutus.Contract.Test.ContractModel.Interface
      Plutus.Contract.Test.ContractModel.Internal
      Plutus.Contract.Test.ContractModel.Internal.ContractInstance
      Plutus.Contract.Test.Coverage
      Plutus.Contract.Test.Coverage.Analysis
      Plutus.Contract.Test.Coverage.Analysis.Common
      Plutus.Contract.Test.Coverage.Analysis.DeBruijn
      Plutus.Contract.Test.Coverage.Analysis.Interpreter
      Plutus.Contract.Test.Coverage.Analysis.Pretty
      Plutus.Contract.Test.Coverage.Analysis.Types
      Plutus.Contract.Test.Coverage.ReportCoverage
      Plutus.Contract.Test.MissingLovelace

    ------------------------
    -- Non-IOG dependencies
    ------------------------
    build-depends:
      , tasty
      , tasty-golden
      , tasty-hunit

test-suite plutus-contract-test
  -- TODO: put this back, turns out there were lots of warnings in the `plutus-emulator` tests...
  --import: lang
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -rtsopts -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  hs-source-dirs:     test
  other-modules:
    Spec.Balancing
    Spec.Contract
    Spec.Contract.Error
    Spec.Contract.Tx.Constraints.MustIncludeDatum
    Spec.Contract.Tx.Constraints.MustMint
    Spec.Contract.Tx.Constraints.MustPayToOtherScript
    Spec.Contract.Tx.Constraints.MustPayToPubKeyAddress
    Spec.Contract.Tx.Constraints.MustProduceAtLeast
    Spec.Contract.Tx.Constraints.MustReferenceOutput
    Spec.Contract.Tx.Constraints.MustSatisfyAnyOf
    Spec.Contract.Tx.Constraints.MustSpendAtLeast
    Spec.Contract.Tx.Constraints.MustSpendPubKeyOutput
    Spec.Contract.Tx.Constraints.MustSpendScriptOutput
    Spec.Contract.Tx.Constraints.MustUseOutputAsCollateral
    Spec.Contract.Tx.Constraints.RequiredSigner
    Spec.Contract.Tx.Constraints.Spec
    Spec.Contract.Tx.Constraints.TimeValidity
    Spec.Emulator
    Spec.ErrorChecking
    Spec.Plutus.Contract.Oracle
    Spec.Rows
    Spec.Secrets
    Spec.State
    Spec.ThreadToken

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-node-emulator    >=1.2.0
    , freer-extras             >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-contract          >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-script-utils      >=1.2.0
    , plutus-tx-constraints    >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api:{cardano-api, gen}  >=1.35
    , plutus-core                     >=1.0.0
    , plutus-ledger-api               >=1.0.0
    , plutus-tx                       >=1.0.0
    , quickcheck-contractmodel
    , quickcheck-dynamic              >=3.0.0

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base                >=4.9 && <5
    , bytestring
    , containers
    , data-default
    , deepseq
    , extensible-effects
    , freer-simple
    , hedgehog
    , lens
    , mtl
    , pretty
    , prettyprinter
    , QuickCheck
    , row-types
    , semigroupoids
    , serialise
    , splitmix
    , stm
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
    , text
    , transformers
    , utf8-string
