cabal-version: 3.0
name:          plutus-e2e-tests
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

author:        James Browning
maintainer:    james.browning@iohk.io
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , cardano-binary
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , iohk-monitoring

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base
    , bytestring
    , containers
    , filepath
    , lens
    , mwc-random
    , network
    , optparse-applicative
    , prettyprinter
    , process
    , serialise
    , sqlite-simple
    , stm
    , streaming
    , text
    , time
    , transformers-except
    , unlift
    , unliftio
    , unordered-containers

  if (os(osx) || os(linux))
    build-depends: unix

test-suite plutus-e2e-tests-test
  import:         lang
  ghc-options:    -Wno-unused-packages
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    CardanoTestnet
    Helpers.Common
    Helpers.Query
    Helpers.Testnet
    Helpers.Tx
    Helpers.Utils
    PlutusScripts.AlwaysSucceeds
    PlutusScripts.Helpers
    PlutusScripts.SECP256k1
    PlutusScripts.V1TxInfo
    PlutusScripts.V2TxInfo
    Spec.AlonzoFeatures
    Spec.BabbageFeatures
    Spec.Builtins.SECP256k1

  --------------------
  -- Local components
  --------------------
  build-depends:  plutus-script-utils >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api:{cardano-api, gen}
    , cardano-testnet
    , iohk-monitoring
    , ouroboros-network
    , plutus-core                     ==1.0.0.1
    , plutus-ledger                   >=1.0.0
    , plutus-ledger-api               ==1.0.0.1
    , plutus-tx                       ==1.0.0.0
    , plutus-tx-plugin                ==1.0.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base             >=4.9 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , hedgehog
    , hedgehog-extras
    , prettyprinter
    , serialise
    , stm
    , streaming
    , tasty
    , tasty-hedgehog
    , temporary
