cabal-version:      3.0
name:               plutus-example
version:            1.33.0
description:
  End to end examples of creating and executing Plutus scripts.

author:             IOHK
maintainer:         operations@iohk.io
license:            Apache-2.0
build-type:         Simple
extra-source-files: README.md

flag unexpected_thunks
  description: Turn on unexpected thunks checks
  default:     False

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common base
  build-depends: base ^>=4.14

common project-config
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost
    OverloadedStrings

  -- See Plutus Tx readme for why we need the following flags: 
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

common maybe-Win32
  if os(windows)
    build-depends: Win32

library
  import:
    base, project-config
    , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:  src
  exposed-modules:
    PlutusExample.AlwaysFails
    PlutusExample.AlwaysSucceeds
    PlutusExample.CustomDatumRedeemerGuess
    PlutusExample.DatumRedeemerGuess
    PlutusExample.Loop
    PlutusExample.MintingScript
    PlutusExample.ScriptContextChecker
    PlutusExample.Sum

  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , cardano-cli
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-slotting
    , containers
    , ouroboros-consensus
    , ouroboros-network
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , serialise
    , strict-containers
    , transformers
    , transformers-except

executable plutus-example
  import:         base, project-config
  hs-source-dirs: app
  main-is:        plutus-example.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , cardano-api
    , directory
    , filepath
    , plutus-example

executable create-script-context
  import:         base, project-config
  hs-source-dirs: app
  main-is:        create-script-context.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , bytestring
    , cardano-api
    , optparse-applicative
    , plutus-example
    , transformers

test-suite plutus-example-test
  import:             base, project-config
  hs-source-dirs:     test
  main-is:            plutus-example-test.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , cardano-api:{cardano-api, gen}
    , cardano-cli
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-prelude
    , cardano-testnet
    , containers
    , directory
    , filepath
    , hedgehog
    , hedgehog-extras
    , plutus-example
    , plutus-ledger-api
    , tasty
    , tasty-hedgehog
    , text
    , unordered-containers

  other-modules:
    Test.PlutusExample.Direct.CertifyingAndWithdrawingPlutus
    Test.PlutusExample.Direct.ScriptContextEquality
    Test.PlutusExample.Direct.ScriptContextEqualityMint
    Test.PlutusExample.Direct.TxInLockingPlutus
    Test.PlutusExample.Gen
    Test.PlutusExample.Plutus
    Test.PlutusExample.Script.TxInLockingPlutus
    Test.PlutusExample.ScriptData
    Test.PlutusExample.SubmitApi.TxInLockingPlutus

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  build-tool-depends:
    , cardano-cli:cardano-cli
    , cardano-node:cardano-node
    , cardano-submit-api:cardano-submit-api
    , plutus-example:create-script-context
