cabal-version:      3.0
name:               plutus-example
version:            1.33.0
description:
  End to end examples of creating and executing Plutus scripts.

author:             IOHK
maintainer:         operations@iohk.io
license:            Apache-2.0
build-type:         Simple
extra-source-files: README.md

flag unexpected_thunks
  description: Turn on unexpected thunks checks
  default:     False

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common common-definitions
  build-depends:      base ^>=4.14
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost
    OverloadedStrings

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

common maybe-Win32

library
  import:          common-definitions

  if os(windows)
    build-depends: Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:  src
  exposed-modules:
    PlutusExample.AlwaysFails
    PlutusExample.AlwaysSucceeds
    PlutusExample.CustomDatumRedeemerGuess
    PlutusExample.DatumRedeemerGuess
    PlutusExample.Loop
    PlutusExample.MintingScript
    PlutusExample.ScriptContextChecker
    PlutusExample.Sum

  --------------------
  -- Local components
  --------------------
  build-depends:   plutus-script-utils

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , cardano-cli
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-slotting
    , ouroboros-consensus
    , ouroboros-network
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , bytestring
    , containers
    , serialise
    , strict-containers
    , transformers
    , transformers-except

executable plutus-example
  import:         common-definitions
  hs-source-dirs: app
  main-is:        plutus-example.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T

  --------------------
  -- Local components
  --------------------
  build-depends:  plutus-example

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:  cardano-api

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , directory
    , filepath

executable create-script-context
  import:         common-definitions
  hs-source-dirs: app
  main-is:        create-script-context.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-api
    , plutus-example

  --------------------------
  -- Other IOG dependencies
  --------------------------
  --------------------------
  -- Non-IOG dependencies
  --------------------------
  build-depends:
    , bytestring
    , optparse-applicative
    , transformers

test-suite plutus-example-test
  import:             common-definitions
  hs-source-dirs:     test
  main-is:            plutus-example-test.hs
  type:               exitcode-stdio-1.0

  --------------------
  -- Local components
  --------------------
  build-depends:      plutus-example

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api:{cardano-api, gen}
    , cardano-cli
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-prelude
    , cardano-testnet
    , hedgehog-extras
    , plutus-ledger-api

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , containers
    , directory
    , filepath
    , hedgehog
    , tasty
    , tasty-hedgehog
    , text
    , unordered-containers

  other-modules:
    Test.PlutusExample.Direct.CertifyingAndWithdrawingPlutus
    Test.PlutusExample.Direct.ScriptContextEquality
    Test.PlutusExample.Direct.ScriptContextEqualityMint
    Test.PlutusExample.Direct.TxInLockingPlutus
    Test.PlutusExample.Gen
    Test.PlutusExample.Plutus
    Test.PlutusExample.Script.TxInLockingPlutus
    Test.PlutusExample.ScriptData
    Test.PlutusExample.SubmitApi.TxInLockingPlutus

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  build-tool-depends:
    , cardano-cli:cardano-cli
    , cardano-node:cardano-node
    , cardano-submit-api:cardano-submit-api
    , plutus-example:create-script-context
