cabal-version:      3.0
name:               plutus-example
version:            1.2.0.0
description:
  End to end examples of creating and executing Plutus scripts.

author:             IOHK
maintainer:         operations@iohk.io
license:            Apache-2.0
build-type:         Simple
extra-source-files: README.md

flag unexpected_thunks
  description: Turn on unexpected thunks checks
  default:     False

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common common-definitions
  build-depends:      base ^>=4.14
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost
    OverloadedStrings

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

common maybe-Win32

library
  import:          common-definitions
  hs-source-dirs:  src

  if os(windows)
    build-depends: Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  exposed-modules:
    PlutusExample.PlutusVersion1.AlwaysFails
    PlutusExample.PlutusVersion1.AlwaysSucceeds
    PlutusExample.PlutusVersion1.CustomDatumRedeemerGuess
    PlutusExample.PlutusVersion1.DatumRedeemerGuess
    PlutusExample.PlutusVersion1.Loop
    PlutusExample.PlutusVersion1.MintingScript
    PlutusExample.PlutusVersion1.RedeemerContextScripts
    PlutusExample.PlutusVersion1.Sum
    PlutusExample.PlutusVersion2.EcdsaSecp256k1Loop
    PlutusExample.PlutusVersion2.MintingScript
    PlutusExample.PlutusVersion2.RedeemerContextEquivalence
    PlutusExample.PlutusVersion2.RequireRedeemer
    PlutusExample.PlutusVersion2.SchnorrSecp256k1Loop
    PlutusExample.PlutusVersion2.StakeScript
    PlutusExample.ScriptContextChecker

  --------------------
  -- Local components
  --------------------
  build-depends:   plutus-script-utils >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api             >=1.35
    , cardano-cli             >=1.35
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , ouroboros-consensus
    , ouroboros-network
    , plutus-ledger-api       >=1.0.0
    , plutus-tx               >=1.0.0
    , plutus-tx-plugin        >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , bytestring
    , containers
    , serialise
    , strict-containers
    , text
    , transformers
    , transformers-except

executable plutus-example
  import:         common-definitions
  hs-source-dirs: app
  main-is:        plutus-example.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T

  --------------------
  -- Local components
  --------------------
  build-depends:  plutus-example >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:  cardano-api >=1.35

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , directory
    , filepath

executable create-script-context
  import:         common-definitions
  hs-source-dirs: app
  main-is:        create-script-context.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-api     >=1.35
    , plutus-example

  --------------------------
  -- Other IOG dependencies
  --------------------------
  --------------------------
  -- Non-IOG dependencies
  --------------------------
  build-depends:
    , bytestring
    , optparse-applicative
    , transformers

test-suite plutus-example-test
  import:             common-definitions
  hs-source-dirs:     test
  main-is:            plutus-example-test.hs
  type:               exitcode-stdio-1.0

  --------------------
  -- Local components
  --------------------
  build-depends:
    , plutus-example  >=1.2.0
    , plutus-ledger   >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api:{cardano-api, gen}  >=1.35
    , cardano-cli                     >=1.35
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-prelude
    , cardano-testnet
    , hedgehog-extras
    , plutus-ledger-api               >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , containers
    , directory
    , filepath
    , hedgehog
    , tasty
    , tasty-hedgehog        >=1.2.0.0
    , text
    , unordered-containers

  other-modules:
    Test.PlutusExample.Direct.CertifyingAndWithdrawingPlutus
    Test.PlutusExample.Direct.ScriptContextEquality
    Test.PlutusExample.Direct.ScriptContextEqualityMint
    Test.PlutusExample.Direct.TxInLockingPlutus
    Test.PlutusExample.Gen
    Test.PlutusExample.Plutus
    Test.PlutusExample.Script.TxInLockingPlutus
    Test.PlutusExample.ScriptData
    Test.PlutusExample.SubmitApi.TxInLockingPlutus

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  build-tool-depends:
    , cardano-cli:cardano-cli                >=1.35
    , cardano-node:cardano-node              >=1.35
    , cardano-submit-api:cardano-submit-api  >=1.35
    , plutus-example:create-script-context
